# xodr-builder

./: .gitmodules  CMakeLists.txt  README.md  XodrBuilder.cpp  XodrBuilder.h  tinyxml2.cpp
example/: CMakeLists.txt
example/cpp/: CMakeLists.txt  main.cpp
example/python/: example.py
replace/: CMakeListsOdrParser.txt  loadFile.cc  tinyxml2.cpp
